# vapoursynth-autocrop

./: meson.build
.github/workflows/: build.yaml
